--- a/src/features/profile/Info/Info.module.css
+++ b/src/features/profile/Info/Info.module.css
@@ -36,14 +36,11 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    z-index: 1000;
 }
 
 .container.input {
     padding: 11px 48px 11px 20px;
-}
-
-.container.wrapper {
-    width: 460px;
 }
 
 .editIcon {
