--- a/src/shared/ui/CustomDatePicker/CustomDatePicker.module.css
+++ b/src/shared/ui/CustomDatePicker/CustomDatePicker.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 4px;
 }
 
 .label {
@@ -11,6 +10,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+  margin-bottom: 4px;
 }
 
 .calendar {
