--- a/src/pages/SkillPage/SkillPage.module.css
+++ b/src/pages/SkillPage/SkillPage.module.css
@@ -1,31 +1,11 @@
 .container {
-  max-width: 1200px;
+  max-width: 1440px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 32px 36px 60px;
 }
 
 .content {
   display: flex;
   gap: 24px;
   margin-bottom: 60px;
-}
-
-.userSection {
-  flex: 1;
-  max-width: 400px;
-}
-
-.skillSection {
-  flex: 2;
-}
-
-.recommendations {
-  margin-top: 40px;
-}
-
-.recommendationsTitle {
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 33px;
-  color: #333;
 }
