feat: Добавлена поддержка пропса error для ComboInput CustomDatePicker TextArea, выполнена валидация формы редактирования профиля пользователя

--- a/src/shared/ui/CustomDatePicker/CustomDatePicker.module.css
+++ b/src/shared/ui/CustomDatePicker/CustomDatePicker.module.css
@@ -102,6 +102,10 @@
   line-height: 1.5;
 }
 
+.input.error {
+    border-color: var(--status-error);
+}
+
 .input:focus,
 .input:focus-visible {
   outline: none;
