--- a/src/shared/ui/ComboInput/ComboInput.module.css
+++ b/src/shared/ui/ComboInput/ComboInput.module.css
@@ -42,6 +42,19 @@
   z-index: 10;
 }
 
+.input.error {
+    border-color: var(--status-error);
+}
+
+.errorMessage {
+    margin-top: 4px;
+    color: var(--status-error);
+    font-family: var(--typeface-body);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+}
+
 .input:focus {
   border-color: var(--text-dominant);
 }
