--- a/src/shared/ui/Select/Select.module.css
+++ b/src/shared/ui/Select/Select.module.css
@@ -89,12 +89,6 @@
   z-index: 10;
 }
 
-.option {
-  padding: 4px 6px;
-  cursor: pointer;
-  transition: background-color 0.2s;
-}
-
 .selectContainer.active .select {
   border-radius: 12px 12px 0 0;
   border-bottom: none;
@@ -124,3 +118,9 @@
   pointer-events: none;
   z-index: 11;
 }
+
+/* .option {
+  padding: 4px 6px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+} */
