feat: Добавлена поддержка валидации для оставшихся компонентов, обработаны регистрационные формы

--- a/src/shared/ui/CustomDatePicker/CustomDatePicker.module.css
+++ b/src/shared/ui/CustomDatePicker/CustomDatePicker.module.css
@@ -106,6 +106,15 @@
     border-color: var(--status-error);
 }
 
+.errorMessage {
+    margin-top: 4px;
+    color: var(--status-error);
+    font-family: var(--typeface-body);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+}
+
 .input:focus,
 .input:focus-visible {
   outline: none;
