--- a/src/shared/ui/Select/Select.module.css
+++ b/src/shared/ui/Select/Select.module.css
@@ -28,6 +28,19 @@
   align-items: center;
 }
 
+.select.error {
+    border-color: var(--status-error);
+}
+
+.errorMessage {
+    margin-top: 4px;
+    color: var(--status-error);
+    font-family: var(--typeface-body);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+}
+
 .disabled {
   background-color: #f5f5f5;
   cursor: not-allowed;
