--- a/src/shared/ui/Modal/Modal.module.css
+++ b/src/shared/ui/Modal/Modal.module.css
@@ -1,24 +1,23 @@
 .overlay {
   position: fixed;
   inset: 0;
-  background-color: rgb(142 142 142 / 60%);
+  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  background-color: rgb(142 142 142 / 60%);
   animation: fade-in 0.3s ease;
 }
 
 .modal {
-  box-sizing: border-box;
-  background-color: var(--surface-main);
-  border-radius: 12px;
-  padding: 62px 60px;
-  min-width: 556px;
-  max-width: 1024px;
   position: fixed;
   top: 50%;
   left: 50%;
+  box-sizing: border-box;
+  max-width: 1024px;
+  max-height: 532px;
+  border-radius: 12px;
+  background-color: var(--surface-main);
   transform: translate(-50%, -50%);
   animation: slide-in 0.3s ease;
 }
