--- a/src/shared/ui/Select/Select.module.css
+++ b/src/shared/ui/Select/Select.module.css
@@ -79,7 +79,7 @@
     all 0.3s ease-out;
   opacity: 0;
   z-index: -10;
-  padding: 14px;
+  padding: 4px 0;
   display: flex;
   flex-direction: column;
   gap: 8px;
