--- a/src/shared/ui/SelectOption/SelectOption.module.css
+++ b/src/shared/ui/SelectOption/SelectOption.module.css
@@ -1,12 +1,14 @@
 .option {
-  display: block;
+  display: flex;
   width: 100%;
-  padding: 12px 16px;
   background: transparent;
   border: none;
-  text-align: left;
   cursor: pointer;
   transition: background-color 0.2s ease;
+  padding: 0 20px;
+  height: 32px;
+  align-items: center;
+  font-size: 16px;
 }
 
 .option:hover {
