--- a/src/shared/ui/ValidationMessage/ValidationMessage.module.css
+++ b/src/shared/ui/ValidationMessage/ValidationMessage.module.css
@@ -1,14 +1,7 @@
-.validationHost {
-    height: 16px;
-    position: relative;
-    overflow: visible;    
-    margin-top: 0;
-}
-
 .validationMessage {
     position: absolute;
     left: 0;
-    top: 0;
+    top: 100%;
     color: var(--status-error);
     font-family: var(--typeface-body);
     font-weight: 400;
