--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
 
 body {
   min-width: 1440px;
-  height: auto;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
@@ -21,6 +20,10 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+#root {
+  height: 100vh;
 }
 
 :root {
