--- a/src/pages/Registration/Registration.module.css
+++ b/src/pages/Registration/Registration.module.css
@@ -155,3 +155,51 @@
     padding: 12px 16px;
   }
 }
+
+.headerModal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    padding-top: 44px;
+    
+}
+
+.content {
+  display: flex;
+  justify-content: space-between;
+  gap: 44px;
+  padding: 40px 60px 72px ;
+}
+
+.descriptionContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  width: 420px;
+
+}
+
+.buttonsContainer {
+   display: flex;
+   gap: 12px;
+  
+}
+
+.title {
+    color: var(--text-dominant);
+    font-family: var(--typeface-headings);
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: -0.01em;
+}
+
+.description {
+    color: var(--text-dominant);
+    font-family: var(--typeface-body);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+}
