Исправление ширины футера

--- a/src/widgets/Header/Header.module.css
+++ b/src/widgets/Header/Header.module.css
@@ -1,5 +1,6 @@
 .header-wrapper {
-    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
     padding: 40px 36px 20px;
     background-color: var(--bg-primary);
 }
